@@ -24,6 +24,34 @@
 #include "libnxcl.h"
 
 /**
+ * Create alarm comment from NXCP message
+ */
+AlarmComment::AlarmComment(CSCPMessage *msg, UINT32 baseId)
+{
+   m_id = msg->GetVariableLong(baseId);
+   m_alarmId = msg->GetVariableLong(baseId + 1);
+   m_timestamp = (time_t)msg->GetVariableLong(baseId + 2);
+   m_userId = msg->GetVariableLong(baseId + 3);
+   m_text = msg->GetVariableStr(baseId + 4);
+   if (m_text == NULL)
+      m_text = _tcsdup(_T(""));
+   m_userName = msg->GetVariableStr(baseId + 5);
+   if (m_userName == NULL)
+   {
+      m_userName = (TCHAR *)malloc(32 * sizeof(TCHAR));
+      _sntprintf(m_userName, 32, _T("[%u]"), m_userId);
+   }
+}
+
+/**
+ * Destructor for alarm comment
+ */
+AlarmComment::~AlarmComment()
+{
+   free(m_text);
+}
+
+/**
  * Fill alarm record from message
  */
 static void AlarmFromMsg(CSCPMessage *pMsg, NXC_ALARM *pAlarm)
@@ -220,27 +248,95 @@ UINT32 LIBNXCL_EXPORTABLE NXCOpenHelpdeskIssue(NXC_SESSION hSession, UINT32 dwAl
    return rcc;
 }
 
-//
-// Format text from alarm data
-// Valid format specifiers are following:
-//		%a Primary IP address of source object
-//		%A Primary host name of source object
-//    %c Repeat count
-//    %e Event code
-//    %E Event name
-//    %h Helpdesk state as number
-//    %H Helpdesk state as text
-//    %i Source object identifier
-//    %I Alarm identifier
-//    %m Message text
-//    %n Source object name
-//    %s Severity as number
-//    %S Severity as text
-//    %x Alarm state as number
-//    %X Alarm state as text
-//    %% Percent sign
-//
+/**
+ * Update alarm comment
+ */
+UINT32 LIBNXCL_EXPORTABLE NXCUpdateAlarmComment(NXC_SESSION hSession, UINT32 alarmId, UINT32 commentId, const TCHAR *text)
+{
+   CSCPMessage msg;
+   UINT32 dwRqId = ((NXCL_Session *)hSession)->CreateRqId();
 
+   msg.SetCode(CMD_UPDATE_ALARM_COMMENT);
+   msg.SetId(dwRqId);
+   msg.SetVariable(VID_ALARM_ID, alarmId);
+   msg.SetVariable(VID_COMMENT_ID, commentId);
+   msg.SetVariable(VID_COMMENTS, text);
+   ((NXCL_Session *)hSession)->SendMsg(&msg);
+
+   return ((NXCL_Session *)hSession)->WaitForRCC(dwRqId);
+}
+
+/**
+ * Update alarm comment
+ */
+UINT32 LIBNXCL_EXPORTABLE NXCAddAlarmComment(NXC_SESSION hSession, UINT32 alarmId, const TCHAR *text)
+{
+   return NXCUpdateAlarmComment(hSession, alarmId, 0, text);
+}
+
+/**
+ * Get alarm comments
+ *
+ * Comments array must be deleted by the caller.
+ */
+UINT32 LIBNXCL_EXPORTABLE NXCGetAlarmComments(NXC_SESSION hSession, UINT32 alarmId, ObjectArray<AlarmComment> **comments)
+{
+   CSCPMessage msg;
+   UINT32 dwRqId = ((NXCL_Session *)hSession)->CreateRqId();
+
+   *comments = NULL;
+
+   msg.SetCode(CMD_GET_ALARM_COMMENTS);
+   msg.SetId(dwRqId);
+   msg.SetVariable(VID_ALARM_ID, alarmId);
+   ((NXCL_Session *)hSession)->SendMsg(&msg);
+
+   UINT32 rcc;
+   CSCPMessage *response = ((NXCL_Session *)hSession)->WaitForMessage(CMD_REQUEST_COMPLETED, dwRqId);
+   if (response != NULL)
+   {
+      rcc = response->GetVariableLong(VID_RCC);
+      if (rcc == RCC_SUCCESS)
+      {
+         int count = response->getFieldAsInt32(VID_NUM_ELEMENTS);
+         ObjectArray<AlarmComment> *list = new ObjectArray<AlarmComment>(count, 16, true);
+         UINT32 fieldId = VID_ELEMENT_LIST_BASE;
+         for(int i = 0; i < count; i++)
+         {
+            list->add(new AlarmComment(response, fieldId));
+            fieldId += 10;
+         }
+         *comments = list;
+      }
+      delete response;
+   }
+   else
+   {
+      rcc = RCC_TIMEOUT;
+   }
+   return rcc;
+}
+
+/**
+ * Format text from alarm data
+ * Valid format specifiers are following:
+ *		%a Primary IP address of source object
+ *		%A Primary host name of source object
+ *    %c Repeat count
+ *    %e Event code
+ *    %E Event name
+ *    %h Helpdesk state as number
+ *    %H Helpdesk state as text
+ *    %i Source object identifier
+ *    %I Alarm identifier
+ *    %m Message text
+ *    %n Source object name
+ *    %s Severity as number
+ *    %S Severity as text
+ *    %x Alarm state as number
+ *    %X Alarm state as text
+ *    %% Percent sign
+ */
 TCHAR LIBNXCL_EXPORTABLE *NXCFormatAlarmText(NXC_SESSION session, NXC_ALARM *alarm, TCHAR *format)
 {
 	static const TCHAR *alarmState[] = { _T("OUTSTANDING"), _T("ACKNOWLEDGED"), _T("TERMINATED") };
